<resources>
    <string name="app_name">Smart Zone</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="no_results_found_for_this_query">No results found for this query</string>
    <string name="username">username</string>
    <string name="title">title</string>
    <string name="repo_image">Repo Image</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_image_dis">image</string>
    <string name="search_but_dis">search_but_dis</string>
    <string name="favorite_item">favorite_item</string>
    <string name="search_area">Search…</string>
    <string name="news">News</string>
    <string name="saved">Saved</string>
</resources>